Progress on tasks

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -234,6 +234,7 @@
                             <ul>
                             <li><a href="/about" aria-label="About Us">About Us</a></li>
                             <li><a href="https://ae3.grainger.illinois.edu/">Academy for Excellence in Engineering Education (AE3)</a></li>
+                            <li><a href="https://illinois.edu/resources/website/copyright.html">Using this page</a></li>
                             </ul>
                             </div>
 
