--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -333,13 +333,13 @@ const path = Astro.url.pathname;
             <div class="col d-flex flex-fill px-0">
                 <div class="site_identification">
                     <div class="parent_name hide-empty d-none d-sm-block" data-value="35">
-                        <a href="https://mechse.illinois.edu" target="_blank" aria-label="The Grainger College of Engineering; Link opens in new tab">
-                            <span>Mechanical Science &amp; Engineering</span>
+                        <a href="https://www.refpages.org/" target="_blank" aria-label="The Grainger College of Engineering; Link opens in new tab">
+                            <span>Reference Pages</span>
                         </a>
                     </div>
                     <div class="site_name">
-                        <a href="/" aria-label="Mechanical Science &amp; Engineering" class="site_name">
-                            <span>MechSE Reference Pages</span>
+                        <a href="https://www.mechref.org" aria-label="Mechanical Science &amp; Engineering" class="site_name">
+                            <span>Mechanical Engineering</span>
                         </a>
                     </div>
                 </div>
