--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -326,7 +326,7 @@ The direction of a vector can be written as a unit vector by dividing the vector
               Need a review of <strong>Cartesian coordinates?</strong>
             </p>
             <p>
-              This content has also been in <a href = "/sta/cartesian_coordinates">Statics</a>
+              This content has also been in <a href = "/sta/cartesian_coordinates">Statics.</a>
             </p>
           </CalloutCard>
       </CalloutContainer>
