Finalizing changes on tasks 218, 219, 220  (#268)
Progress on tasks

Co-authored-by: Omar Shatat <omarshatat@Omars-MacBook-Air-2.local>
Co-authored-by: kevin-wandke <43739152+kevin-wandke@users.noreply.github.com>

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -201,7 +201,11 @@
                             <div class="il-footer-column col-12 col-md mb-5 mb-md-0 hide-empty" data-value="480">
                                 <h2 class="text-black">Learn More</h2>
                             <ul>
-                            <li><a href="/about" class="fs-5 mt-10" aria-label="About Us">About Us</a></li>
+
+                            <li><a href="/about" aria-label="About Us">About Us</a></li>
+                            <li><a href="https://ae3.grainger.illinois.edu/">Academy for Excellence in Engineering Education (AE3)</a></li>
+                            <li><a href="https://illinois.edu/resources/website/copyright.html">Using this page</a></li>
+
                             </ul>
                             </div>
 
