--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -155,13 +155,13 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
 <div>
 <div style="height:50px"></div>
 
-</Section>
 <SubSection title="Start building your course">
     <ul class="list-group list-group-flush">
         <li class="list-group-item"><a href="/about/instructors" class="text-body">For instructors</a></li>
 
     </ul>
     <div style="height:10px"></div>
+</SubSection>
 
     <SubSection class="text-center" title="Documentation and Style Guide">
     <div style="height:10px"></div>
