--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -154,6 +154,7 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
        </div>
 <div>
 <div style="height:50px"></div>
+</SubSection>
 
 <SubSection title="Start building your course">
     <ul class="list-group list-group-flush">
