--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -1312,15 +1312,19 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     </p>
 
     <CalloutContainer slot="cards">
+<!--
       <CalloutCard title="Reference material">
         <Itemize margin="False">
           <Item>Elementary motions</Item>
         </Itemize>
       </CalloutCard>
+-->
       <CalloutCard title="Concepts applied">
         <Itemize margin="False">
-          <Item>Angular velocity</Item>
-          <Item>Angular acceleration</Item>
+          <Item>    
+<a href="#angular_velocity ">Angular velocity</a></Item>
+          <Item>    
+<a href="#angular_acceleration ">Angular acceleration</a></Item>
         </Itemize>
       </CalloutCard>
     </CalloutContainer>
