--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -1319,7 +1319,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         </Itemize>
       </CalloutCard>
 -->
-      <CalloutCard title="Concepts applied">
+      <CalloutCard title="Reference material">
         <Itemize margin="False">
           <Item>    
 <a href="#angular_velocity ">Angular velocity</a></Item>
