Fixing mistakes on About Page

--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -144,6 +144,39 @@ import "../../public/static/css/course_home_pages.css"
                         </Itemize>
                       </p>
             </div>
-        </div>    
+        </div> 
+        <div style="height:60px"></div>
+        <h2 class="site-title">The Faculty at ME 370 and ME 371:</h2>
+        <div style="height:10px"></div>
+
+        <div>
+            <ul class="list-unstyled d-flex flex-wrap text-center mb-1 ml-4">
+                    <li class="me-5 text-center">
+                            <a href="href="https://grainger.illinois.edu/about/directory/faculty/wandke2">
+                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19440&s=300" />
+                            </a>
+                            <h3 style="font-size:15px" class="mt-1">Kevin Wandke</h2>
+                     </li>
+            </ul>
+        </div>
+        <div style="height:50px"></div>
+
+
     </Layout>
     
+<style>
+      h2 {
+            font-weight: 700;
+            letter-spacing: -0.7px;
+      }
+      .small-img {
+            width: 120px;
+            height: 120px;
+      }
+      .border-orange {
+            border: 6px solid #ff724f;
+      }
+      .border-blue {
+            border: 6px solid #13294B;
+      }
+</style>
