--- a/src/pages/sol.astro
+++ b/src/pages/sol.astro
@@ -301,6 +301,6 @@ import "../../public/static/css/course_home_pages.css"
             border: 6px solid #ff724f;
       }
       .border-blue {
-            border: 6px solid blue;
+            border: 6px solid #13294B;
       }
 </style>
