--- a/src/pages/thermodynamics.astro
+++ b/src/pages/thermodynamics.astro
@@ -211,6 +211,46 @@ import "../../public/static/css/course_home_pages.css"
             </div>
             <div class="col-md-0 col-0">
             </div>
-        </div>    
+        </div>
+         <div style="height:40px"></div>
+  <h2 class="site-title">The Faculty at ME 200:</h2>
+  <div style="height:10px"></div>
+
+  <div>
+      <ul class="list-unstyled d-flex flex-wrap text-center mb-1 ml-4">
+              <li class="me-5 text-center">
+                            <a href="https://matse.illinois.edu/people/profile/hutchs">
+                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=9442&s=300"/>
+                            </a>
+                            <h2 style="font-size:20px" class="site-title mt-2">Shelby Hutchens</h2>
+              </li>
+      </ul>
+  </div>
+  <div style="height:20px"></div>
+
+  <div>
+    <h2 style="font-size:25px" class="site-title"> Student Authors / Editors: </h2>
+    <ul>
+      <li> <h2 style="font-size:20px;" class="site-title">Alex Spitzer</h2> </li>
+    </ul>
+  </div>
+
+  <div style="height:20px"></div>
     </Layout>
-    
+
+    <style>
+      h2 {
+            font-weight: 700;
+            letter-spacing: -0.7px;
+      }
+      .small-img {
+            width: 120px;
+            height: 120px;
+      }
+      .border-orange {
+            border: 6px solid #ff724f;
+      }
+      .border-blue {
+            border: 6px solid #13294B;
+      }
+</style>
