Callout Container Fix

--- a/src/components/CalloutContainer.astro
+++ b/src/components/CalloutContainer.astro
@@ -3,6 +3,12 @@
         width: calc(100%);
         font-size: 1rem;
     }
+    
+    .sticky{
+        align-self: start;
+        position: sticky;
+        top: calc(53px + 1rem);
+    }
 
     .sticky{
         align-self: start;
