Fixing mistakes on About Page, adding extra authorship (#270)
* Progress on tasks

* Fixing mistakes on About Page

---------

Co-authored-by: Omar Shatat <omarshatat@Omars-MacBook-Air-2.local>
Co-authored-by: kevin-wandke <43739152+kevin-wandke@users.noreply.github.com>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,7 +22,7 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
               border: 6px solid #ff724f;
        }
        .border-blue {
-               border: 6px solid blue;
+               border: 6px solid #13294B;
        }
 
 </style>
@@ -64,27 +64,26 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
 
 <h2 class="text-center site-title">Meet the Team:</h2>
 <div style="height:10px"></div>
-<h3 style="font-size: 20px;" class="text-center"> <span style="color:#ff724f;">Faculty</span> and <span style="color:blue;">Student</span> Community of Practice </h3>
-
+<h3 style="font-size: 20px;" class="text-center"> <span style="color:#13294B;">Faculty</span> and <span style="color:#ff724f;">Student</span> Community of Practice </h3>
 <div style="height:50px"></div>
 <div style="width: 800px; margin: 0 auto;">
        <div>
               <ul style="padding-left: 90px;" class="list-unstyled d-flex flex-wrap text-center mb-1 ml-4">
                      <li class="me-5 text-center">
                             <a href="https://mechse.illinois.edu/people/profile/admal">
-                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19308&s=300" />
+                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19308&s=300" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Nikhil Admal</h2>
                      </li>
                      <li class="me-5 text-center">
                             <a href="https://grainger.illinois.edu/about/directory/faculty/wlchang">
-                            <img class="border-blue small-img rounded-circle" src="../public/about/waynechang.jpeg" />
+                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=18679&s=300" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Wayne Chang</h2>
                      </li>
                      <li class="me-5 text-center">
                             <a href="https://grainger.illinois.edu/about/directory/faculty/tfg">
-                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19205&s=300"/>
+                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19205&s=300"/>
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Tom Golecki</h2>
                      </li>
@@ -99,14 +98,12 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
        <div>
               <ul style="padding-left: 90px;" class="list-unstyled d-flex flex-wrap text-center pt-3 mb-1">
                      <li class="me-5 text-center">
-                            <a href="href="https://beckman.illinois.edu/contact/directory/advancedsearch?unitSearch=true&researchSearch=false&unitName=Department%20of%20Mechanical%20Science%20and%20Engineering&researchQuery=">
-                            <img class="border-orange small-img rounded-circle" src="https://beckman.illinois.edu/images/default-source/people/mikayla-hoyle.jpeg?sfvrsn=6fd01917_4"/>
-                            </a>
+                            <img class="border-orange small-img rounded-circle" src="about/mikaylahoyle.jpg" />
                             <h3 style="font-size:15px" class="mt-1">Mikayla Hoyle</h2>
                      </li>
                      <li class="me-5 text-center">
                             <a href="https://matse.illinois.edu/people/profile/hutchs">
-                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=9442&s=300"/>
+                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=9442&s=300"/>
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Shelby Hutchens</h2>
                      </li>
@@ -127,21 +124,17 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
        <div>
               <ul style="padding-left: 90px;" class="list-unstyled d-flex flex-wrap text-center pt-3 mb-4">
                      <li class="me-5 text-center">
-                            <a href="href="https://grainger.illinois.edu/about/directory/faculty/bmercer">
-                            <img class="border-orange small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=10408&s=300" />
+                            <a href="https://mechse.illinois.edu/people/profile/bmercer">
+                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=10408&s=300" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Brian Mercer</h2>
                      </li>
                      <li class="me-3 text-center">
-                            <a href="">
-                            <img class="border-blue small-img rounded-circle" src="https://media.licdn.com/dms/image/v2/D5603AQHSEf1dkNk89w/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1697822928321?e=2147483647&v=beta&t=5aWEiU1vfH8fAh6BR5p7Dmjgwa6NQy-oEnmKM2EfsBg"/>
-                            </a>
+                            <img class="border-orange small-img rounded-circle" src="https://media.licdn.com/dms/image/v2/D5603AQHSEf1dkNk89w/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1697822928321?e=2147483647&v=beta&t=5aWEiU1vfH8fAh6BR5p7Dmjgwa6NQy-oEnmKM2EfsBg"/>
                             <h3 style="font-size:15px" class="mt-1">Melany Opolz</h2>
                      </li>
                      <li style="margin-right:35px; class="me-4 text-center">
-                            <a href="">
                             <img class="border-orange small-img rounded-circle" src="https://media.licdn.com/dms/image/v2/D4E03AQE0HKOw_e393w/profile-displayphoto-shrink_800_800/B4EZYN_fHqG0Ac-/0/1743991468884?e=1755734400&v=beta&t=7n2MT-YXxstkSmEhSCN2stHGflOqz6ZCWNYSKkv0s6Q" />
-                            </a>
                             <h3 style="font-size:15px" class="mt-1">Chris Raymond-Bertrand</h2>
                      </li>
                      <li class="me-5 text-center">
@@ -152,11 +145,30 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
                      </li>
               </ul>
        </div>
+       <div>
+              <ul style="padding-left: 340px;" class="list-unstyled d-flex flex-wrap text-center pt-3 mb-4">
+                     <li class="me-5 text-center">
+                            <a href="href="https://grainger.illinois.edu/about/directory/faculty/wandke2">
+                            <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19440&s=300" />
+                            </a>
+                            <h3 style="font-size:15px" class="mt-1">Kevin Wandke</h2>
+                     </li>
+              </ul>
+       </div>
+<div>
+<div style="height:30px"></div>
 
-<div style="height:50px"></div>
-</SubSection>
+<div style="width:1000px;">
+    <SubSection title="About">
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item"><a href="/about/students"  class="text-body">For students</a></li>
+        <li class="list-group-item"><a href="/about/instructors" class="text-body">For instructors</a></li>
+    </ul>
+    </Section>
+    <div style="height:10px"></div>
 
-<SubSection class="text-center" title="Documentation and Style Guide">
+    <SubSection class="text-center" title="Documentation and Style Guide">
+
     <div style="height:10px"></div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item">
@@ -174,27 +186,28 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
             <li class="list-group-item"><a href="/about/docs" class="text-body">Style guide & documentation</a></li>
             <li class="list-group-item"><a href="/about/troubleshooting" class="text-body">Troubleshooting & Common problems</a></li>
         </ul>
-</SubSection>
+
+    </SubSection>
+
 
     <div style="height:40px"></div>
     <SubSection id="thanks" title="Acknowledgements">
     <div style="height:20px"></div>
         <p> Funding for the development of the course reference pages has been provided by: </p>
-        <p> The Grainger College of Engineering Strategic Instructional Innovations Program</p>
-        <p> Kern Family Foundation </p>
-        <p> Department of Mechanical Science and Engineering </p>
-        <p> Some images used were created with biorender.com </p>
+        <ul>
+              <li>The Grainger College of Engineering Strategic Instructional Innovations Program</li>
+              <li> Kern Family Foundation </li>
+              <li> Department of Mechanical Science and Engineering </li>
+              <li> Some images used were created with biorender.com </li>
+        </ul>
     </SubSection>
 
     <div style="height:40px"></div>
     <SubSection title="Using These Pages">
     <div style="height:20px"></div>
-        <p>  Copywrite info will go here </p>
-        <p>  Copywrite info will go here </p>
-        <p> Copywrite info will go here </p>
-        <p>  Copywrite info will go here </p>
-        <p> Copywrite info will go here </p>
+        <p>refpages.org and its associated websites are licensed under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" class="text-body">Creative Commons Attribution-Non Commercial-Share Alike 4.0 International License (CC BY-NC-SA) </a>. You are welcome to download, use, and print this material freely, provided that your use is not primarily for commercial gain or monetary compensation. You may also adapt or modify the content as long as you credit the original authors for the portions you use. We’d love to see your contributions, so please consider sharing them with us! </p>
     </SubSection>
+    <div style="height:60px"></div>
 </div>
 
 </Layout>
