--- a/src/pages/dyn.astro
+++ b/src/pages/dyn.astro
@@ -20,7 +20,9 @@ import "../../public/static/css/course_home_pages.css"
               border: 6px solid #ff724f;
        }
        .border-blue {
-               border: 6px solid blue;
+
+               border: 6px solid #13294B;
+
        }
 
 </style>
@@ -58,6 +60,16 @@ import "../../public/static/css/course_home_pages.css"
                     <h2 style="font-size:20px" class="site-title mt-2">Matt West</h2>
               </li>
       </ul>
+  </div>
+
+
+  <div style="height:30px"></div>
+
+  <div>
+    <h2 style="font-size:25px" class="site-title"> Student Authors / Editors: </h2>
+    <ul>
+      <li> <h2 style="font-size:20px;" class="site-title">Melany Opolz</h2> </li>
+    </ul>
   </div>
 
   <div style="height:20px"></div>
