--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -98,7 +98,7 @@ const imageUrl = "https://media.istockphoto.com/id/1288129985/vector/missing-ima
        <div>
               <ul style="padding-left: 90px;" class="list-unstyled d-flex flex-wrap text-center pt-3 mb-1">
                      <li class="me-5 text-center">
-                            <img class="border-orange small-img rounded-circle" src="about/mikaylahoyle.jpg" />
+                            <img class="border-orange small-img rounded-circle" src="/about/mikaylahoyle.jpg" />
                             <h3 style="font-size:15px" class="mt-1">Mikayla Hoyle</h2>
                      </li>
                      <li class="me-5 text-center">
