--- a/src/pages/dyn.astro
+++ b/src/pages/dyn.astro
@@ -48,7 +48,7 @@ import "../../public/static/css/course_home_pages.css"
   </section>
   <div style="height:40px"></div>
 
-  <h2 class="site-title">The Faculty at TAM 212:</h2>
+  <h2 class="site-title">Faculty Authors:</h2>
   <div style="height:10px"></div>
 
   <div>
@@ -66,7 +66,7 @@ import "../../public/static/css/course_home_pages.css"
   <div style="height:30px"></div>
 
   <div>
-    <h2 style="font-size:25px" class="site-title"> Student Authors / Editors: </h2>
+    <h2 style="font-size:25px" class="site-title"> Student Authors: </h2>
     <ul>
       <li> <h2 style="font-size:20px;" class="site-title">Melany Opolz</h2> </li>
     </ul>
