--- a/src/pages/md.astro
+++ b/src/pages/md.astro
@@ -146,13 +146,13 @@ import "../../public/static/css/course_home_pages.css"
             </div>
         </div> 
         <div style="height:60px"></div>
-        <h2 class="site-title">The Faculty at ME 370 and ME 371:</h2>
+        <h2 class="site-title">Faculty Authors:</h2>
         <div style="height:10px"></div>
 
         <div>
             <ul class="list-unstyled d-flex flex-wrap text-center mb-1 ml-4">
                     <li class="me-5 text-center">
-                            <a href="href="https://grainger.illinois.edu/about/directory/faculty/wandke2">
+                            <a href="https://grainger.illinois.edu/about/directory/faculty/wandke2">
                             <img class="border-blue small-img rounded-circle" src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=19440&s=300" />
                             </a>
                             <h3 style="font-size:15px" class="mt-1">Kevin Wandke</h2>
@@ -161,6 +161,15 @@ import "../../public/static/css/course_home_pages.css"
         </div>
         <div style="height:50px"></div>
 
+        <div style="height:30px"></div>
+
+        <div>
+            <h2 style="font-size:25px" class="site-title"> Student Authors: </h2>
+            <ul>
+                <li> <h2 style="font-size:20px;" class="site-title">Sophia Litauszki</h2> </li>
+                <li> <h2 style="font-size:20px;" class="site-title">Allan Zhu</h2> </li>
+            </ul>
+        </div>
 
     </Layout>
     
