--- a/src/pages/sol.astro
+++ b/src/pages/sol.astro
@@ -254,7 +254,7 @@ import "../../public/static/css/course_home_pages.css"
 
 
   <div style="height:40px"></div>
-  <h2 class="site-title">The Faculty at TAM 251:</h2>
+  <h2 class="site-title">Faculty Authors:</h2>
   <div style="height:10px"></div>
 
   <div>
@@ -276,7 +276,7 @@ import "../../public/static/css/course_home_pages.css"
   <div style="height:20px"></div>
 
   <div>
-    <h2 style="font-size:25px" class="site-title"> Student Authors / Editors: </h2>
+    <h2 style="font-size:25px" class="site-title"> Student Authors: </h2>
     <ul>
       <li> <h2 style="font-size:20px;" class="site-title">Mikayla Hoyle</h2> </li>
       <li> <h2 style="font-size:20px;" class="site-title">Chris Raymond-Bertrand</h2> </li>
