--- a/src/pages/thermodynamics.astro
+++ b/src/pages/thermodynamics.astro
@@ -213,7 +213,7 @@ import "../../public/static/css/course_home_pages.css"
             </div>
         </div>
          <div style="height:40px"></div>
-  <h2 class="site-title">The Faculty at ME 200:</h2>
+  <h2 class="site-title">Faculty Authors:</h2>
   <div style="height:10px"></div>
 
   <div>
