--- a/src/pages/sta.astro
+++ b/src/pages/sta.astro
@@ -52,7 +52,7 @@ import "../../public/static/css/course_home_pages.css"
   </section>
   <div style="height:40px"></div>
 
-  <h2 class="site-title">The Faculty at TAM 210:</h2>
+  <h2 class="site-title">Faculty Authors:</h2>
   <div style="height:10px"></div>
 
   <div>
