--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -1072,7 +1072,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
   vectors.
 </p>
 
-<DisplayEquation title="Osculating circle" id="rkt-eo" equation="\\text{center C} = \\vec{r} + \\rho \\hat{e}_n,\\qquad \\text{radius} \\; \\rho,\\qquad \\text{normal} \\; \\hat{e}_b" background="True" derivation="True">
+<DisplayEquation title="Osculating circle" id="rkt-eo" equation="\\text{center C} = \\vec{r} + \\rho \\hat{e}_n,\\qquad \\text{radius} \\; \\rho,\\qquad \\text{normal to} \\; \\hat{e}_b" background="True" derivation="True">
   <p>
   Consider a particle \(P\) with position vector <InlineEquation equation="\\vec{r}_P" />
   moving with velocity <InlineEquation equation="\\vec{v}_P" />
