truss system POC
proof of concept truss system with reaction forces and an external force

--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -154,7 +154,7 @@ Then, you "cut" the truss so that the internal force you want is "exposed" from 
 </SubSection>
 
 
-
+<PrairieDrawCanvas id="triangle-truss" height="600" width="600"/>
 </Layout>
 
 <script src="/sta/trusses/canvases.js" is:inline></script>
